fixed mobile detect + fixed blur v focus on forms
+ min width detecting was too big
+ staticTextarea.blur() then modalTextarea.focus()

--- a/app/styles/_header.scss
+++ b/app/styles/_header.scss
@@ -15,7 +15,7 @@
 // o————————————————————————————————————o nav —>
 //
 nav {
-  margin-bottom: 24px;
+  margin-bottom: 16px;
   font-weight: 300;
   font-size: 1rem;
   letter-spacing: 0.1rem;
