--- a/app/styles/_modal.scss
+++ b/app/styles/_modal.scss
@@ -4,12 +4,12 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(0, 0, 0, 0.87);
   z-index: 1;
 
   &__main {
     position: fixed;
-    width: 80%;
+    width: 75%;
     height: auto;
     top: 50%;
     left: 50%;
@@ -88,6 +88,7 @@
       border: 0;
       border-bottom: 1px solid white;
       background-color: transparent;
+      resize: none;
 
       &::placeholder {
         color: gray;
